 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-2639] added net.if.total and net.if.list items in the help_items table (Sasha)
 - [ZBX-1600] added support of value mapping for {ITEM.VALUE} macro in notifications (Sasha)
 - [ZBX-3065] fixed undefined variables in maps.php when logged as guest and no maps defined (Vedmak)
 - [ZBX-3206] fixed timeout for simple checks (removed hardcoded timeout 3 sec) (Sasha)
 - [ZBX-2787] it is no longer possible add invalid time for IT services, like 1:111 or 23:67 or 4:66 and so on (KB)
 - [ZBXNEXT-557] added TL compatibility information when executed AIX agent with --version flag (Sasha)
 - [ZBX-3195] fixed slow sync of trends data while server shutdown (Sasha)
 - [ZBXNEXT-549] added trigger function strlen() (asaveljevs,Vedmak)
 - [ZBX-3156] fixed integer trends for child node on master; thanks to Łukasz Reszka (asaveljevs)
 - [ZBX-3040] guest users now can't edit trigger comments (KB)
 - [ZBX-3123] fixed Oracle SQL errors in processing of IT services (Sasha)
 - [ZBXNEXT-205,ZBXNEXT-355] added support of user macros in community, OID, security name and passphrases fields of SNMP items (Sasha,Aly)
 - [ZBXNEXT-357] added support of user macros in parameters field of database item; thanks to Kirill Fateev (Sasha) 
 - [ZBX-3179] fixed memory leaks and 100% CPU usage for proxy with SQLite3 (asaveljevs)
 - [ZBXNEXT-538] include ibm_db2.sql and images_ibm_db2.sql files in distribution package (Sasha)
 - [ZBX-3107] fixed graph bugs: problem with large values, problem with uptime format (KB)
 - [ZBX-2349] unicode support for macros and web scenario steps (KB)